--- a/search.html
+++ b/search.html
@@ -58,7 +58,7 @@
                     <a class="nav-link" href="search.html">Search</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="score">Score</a>
+                    <a class="nav-link" href="score.html">Score</a>
                 </li>
                 
             </ul>
